# jcode

./: .gitignore  AGENTS.md  Cargo.toml  JCODE_DCP_PLAN.md  README.md  REMAINING.md  bacon.toml  ratatui-to-frankentui-fix-workflow.md  ratatui-to-frankentui-plan.md
.agents/skills/feature-planning/: SKILL.md
.beads/: config.yaml  issues.jsonl
.github/workflows/: freebsd-cross.yml  release.yml
.jcode/agents/: basher.toml  code-reviewer.toml  editor.toml  file-picker.toml
.omo/: ralph-loop.local.md
.omo/run-continuation/: ses_18eb92d2fffexOvbRQQgO2B9IM.json  ses_1940f9a71ffe84kVTTrD4gUidN.json
crates/jcode-agent-runtime/: Cargo.toml
crates/jcode-agent-runtime/src/: definition.rs  lib.rs  output.rs  reasoning.rs  registry.rs  tier.rs
crates/jcode-agent-runtime/tests/: sample_agents.rs
crates/jcode-app-core/: Cargo.toml
crates/jcode-app-core/src/: agent.rs  channel.rs  external_auth.rs  lib.rs  server.rs  setup_hints.rs
crates/jcode-base/src/: compaction.rs  live_tests.rs  session.rs  telemetry.rs
crates/jcode-config-types/src/: lib.rs
crates/jcode-desktop/src/: animation.rs  desktop_worker_host.rs  main.rs  main_tests.rs  session_launch.rs  single_session.rs  single_session_render.rs  workspace.rs
crates/jcode-memory-types/: Cargo.toml
crates/jcode-memory-types/src/: lib.rs  provider.rs
crates/jcode-mempalace-adapter/: Cargo.toml
crates/jcode-mempalace-adapter/src/: event_capture_bridge.rs  lib.rs  write_through.rs
crates/jcode-protocol/src/: lib.rs  wire.rs
crates/jcode-provider-core/src/: models.rs
crates/jcode-provider-metadata/src/: catalog.rs  lib.rs
crates/jcode-storage/src/: lib.rs
crates/jcode-tool-core/: Cargo.toml
crates/jcode-tool-core/src/: lib.rs
crates/jcode-tui/: Cargo.toml
crates/jcode-tui-markdown/: Cargo.toml
crates/jcode-tui-markdown/src/: lib.rs  markdown_mermaid_fallback.rs  markdown_render_support.rs  markdown_text_preprocess.rs  markdown_types.rs  markdown_wrap.rs
crates/jcode-tui-mermaid/: Cargo.toml
crates/jcode-tui-mermaid/src/: lib.rs
crates/jcode-tui-messages/: Cargo.toml
crates/jcode-tui-messages/src/: cache.rs  lib.rs  prepared.rs
crates/jcode-tui-render/: Cargo.toml
crates/jcode-tui-render/src/: box_utils.rs  chrome.rs  layout.rs  lib.rs
crates/jcode-tui-style/: Cargo.toml
crates/jcode-tui-style/src/: color.rs  lib.rs  theme.rs
crates/jcode-tui-usage-overlay/: Cargo.toml
crates/jcode-tui-usage-overlay/src/: lib.rs
crates/jcode-tui-workspace/: Cargo.toml
crates/jcode-tui-workspace/src/: color_support.rs  lib.rs  workspace_map.rs  workspace_map_widget.rs
docs/: AWS_BEDROCK_PROVIDER.md  BUILD_FREEBSD.md  CODE_QUALITY_TODO.md  CONFIG_REFERENCE.md  DCG_INTEGRATION.md  DCG_PLAN.md  PERMISSION_MODES_PLAN.md  PROVIDER_DOCTOR.md  RATATUI_MIGRATION_FEASIBILITY.md  SAFE_EVALUATION.md  ZAI_CODING_PLAN.md
evals/jbench/: Cargo.toml
evals/jbench/src/: agent_runner.rs  judge.rs  lessons.rs  lib.rs  types.rs
scripts/: desktop_reload_window_e2e.sh
src/: agent.rs  config.rs  config_tests.rs  customization.rs  dcg_bridge.rs  dcp_bridge.rs  doctor.rs  export.rs  external_auth.rs  lib.rs  live_tests.rs  main.rs  memory.rs  message.rs  model_failover.rs  model_routing.rs  orchestration_api.rs  prefix_cache_stable.rs  process_title.rs  prompt.rs  prompt_placeholders.rs  prompt_templates.rs  prompt_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  replay.rs  safety.rs  session.rs  setup_hints.rs  skill.rs  skill_distillation.rs  telemetry.rs  theme.rs  yolo_classifier.rs
src/agent/: prompting.rs  turn_execution.rs  turn_loops.rs  turn_streaming_broadcast.rs  turn_streaming_mpsc.rs
src/auth/: external.rs  integration.rs  lifecycle.rs  mod.rs
src/cli/: args.rs  commands.rs  commands_tests.rs  dispatch.rs  hot_exec.rs  login.rs  mod.rs  proctitle.rs  provider_doctor.rs  provider_init.rs  provider_init_tests.rs  selfdev_tests.rs  startup.rs  terminal.rs  terminalinit.rs  tui_launch.rs
src/cli/args/: tests.rs
src/cli/auth_test/: choice.rs  run.rs
src/config/: default_file.rs  display_summary.rs  env_overrides.rs
src/hooks/: config.rs  execute.rs  matcher.rs  mod.rs  registry.rs  types.rs
src/mcp/: protocol.rs  trust.rs
src/message/: notifications.rs
src/provider/: anthropic.rs  anthropic_tests.rs  bedrock.rs  mod.rs  openai.rs  openai_provider_impl.rs  openrouter.rs  openrouter_provider_impl.rs  openrouter_sse_stream.rs  openrouter_tests.rs  selection.rs  startup.rs
src/provider/tests/: model_resolution.rs
src/replay/: tests.rs
src/server/: client_actions.rs  client_lifecycle.rs  client_state.rs  debug_ambient.rs  provider_control.rs
src/session_tests/: cases.rs
src/telemetry/: tests.rs
src/tool/: bash.rs  bash_tests.rs  communicate_tests.rs  conversation_search.rs  goal_tests.rs  hashline_edit.rs  mod.rs  read.rs  session_search.rs  tests.rs
src/tui/: account_picker.rs  account_picker_render.rs  app.rs  backend.rs  box_utils.rs  color_support.rs  compat.rs  ftui_compat.rs  info_widget.rs  info_widget_git.rs  info_widget_layout.rs  info_widget_memory_render.rs  info_widget_model.rs  info_widget_swarm_background.rs  info_widget_tests.rs  info_widget_tips.rs  info_widget_todos.rs  info_widget_usage.rs  layout_utils.rs  login_picker.rs  memory_profile.rs  mod.rs  model.rs  permissions.rs  runtime.rs  session_picker.rs  ui.rs  ui_animations.rs  ui_box.rs  ui_debug_capture.rs  ui_diagram_pane.rs  ui_diff.rs  ui_file_diff.rs  ui_header.rs  ui_inline.rs  ui_inline_interactive.rs  ui_input.rs  ui_layout.rs  ui_memory.rs  ui_memory_estimates.rs  (+16 more)
src/tui/app/: auth.rs  commands.rs  conversation_state.rs  event_wrappers.rs  helpers.rs  inline_interactive.rs  input.rs  input_help.rs  local.rs  misc_ui.rs  model_context.rs  navigation.rs  remote.rs  run_shell.rs  state_ui.rs  state_ui_input_helpers.rs  state_ui_maintenance.rs  state_ui_messages.rs  state_ui_runtime.rs  tui_lifecycle.rs  tui_lifecycle_runtime.rs  tui_state.rs  turn.rs
src/tui/session_picker/: render.rs
src/tui/ui/: draw_recovery.rs
src/tui/ui_messages/: tests.rs
tests/: tool_fixtures.rs
(+59 files in other folders)
