[package]
name = "jcode-mempalace-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
# The mempalace memory library.
mempalace-core = { git = "https://github.com/quangdang46/mempalace_rust.git", branch = "main" }

# jcode memory types (the seam).
jcode-memory-types = { path = "../jcode-memory-types" }

# Async runtime.
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1"

# Utilities.
anyhow = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
