[package]
name = "jcode-tui-mermaid"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
renderer = ["dep:mermaid-rs-renderer"]
# Enables the renderer size API path when the patched/upgraded mmdr crate is available.
# Until the dependency is bumped, set JCODE_MMDR_SIZE_API_AVAILABLE=1 with a Cargo patch.
mmdr-size-api = ["renderer"]

[dependencies]
ftui = { path = "/data/projects/frankentui/crates/ftui" }
ftui-core = { path = "/data/projects/frankentui/crates/ftui-core" }
ftui-widgets = { path = "/data/projects/frankentui/crates/ftui-widgets" }
ftui-tty = { path = "/data/projects/frankentui/crates/ftui-tty" }
anyhow = "1"
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
jcode-tui-workspace = { path = "../jcode-tui-workspace" }
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer.git", tag = "v0.2.1", optional = true }
resvg = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
usvg = "0.46"
