[package]
name = "jcode-tui-render"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui = { path = "/data/projects/frankentui/crates/ftui" }
ftui-core = { path = "/data/projects/frankentui/crates/ftui-core" }
ftui-style = { path = "/data/projects/frankentui/crates/ftui-style" }
ftui-render = { path = "/data/projects/frankentui/crates/ftui-render" }
ftui-layout = { path = "/data/projects/frankentui/crates/ftui-layout" }
ftui-text = { path = "/data/projects/frankentui/crates/ftui-text" }
ftui-widgets = { path = "/data/projects/frankentui/crates/ftui-widgets" }
unicode-width = "0.2"
