[package]
name = "jcode-tui-usage-overlay"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
# Migrated to frankentui's ftui-style on branch experimental/ratatui-to-frankentui.
# Pinned to a specific commit on quangdang46/frankentui main so dependency
# resolution stays reproducible across machines that do not have a local
# /data/projects/frankentui checkout.
ftui-style = { git = "https://github.com/quangdang46/frankentui", rev = "33ad1c57d545292242e41a477c8278c70ed7e0d6" }

[features]
default = []
serde = ["dep:serde"]
