[package]
name = "jcode-tui-usage-overlay"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui = { path = "/data/projects/frankentui/crates/ftui" }
ftui-style = { path = "/data/projects/frankentui/crates/ftui-style" }
ftui-widgets = { path = "/data/projects/frankentui/crates/ftui-widgets" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
